--- a/css/styles.css
+++ b/css/styles.css
@@ -265,6 +265,7 @@ footer ul li {
   align-content: center;
   align-items: stretch;
   text-align: center;
+  padding-left: 2%;
 }
 
 #bottom-section-title {
